smartbook/k8s-smartbook-service.yaml
apiVersion: v1
kind: Service
metadata:
  # 代表的是我们的smartbook本体
  name: smartbook
  # 说明书
spec:
  type: LoadBalancer
    #type: NodePort
  selector:
    app: smartbook
  ports:
    - name: http
      protocol: TCP
        # 81是kubernetes暴露在外部的端口，通过外部的81端口访问会直接对接到容器里面的8082端口
      port: 81
      targetPort: 8082
