smartbook/k8s-ingress-nginx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smartbook-ingress
spec:
#  老子要用 nginx
  ingressClassName: nginx
  rules:
#    host 是 smartbook.com 的时候，命中我这条,自己需要在hosts文件里添加这个host映射
    - host: smartbok.com
      http:
        paths:
#          - 请求路径的前缀是 / 的时候
#          - 将流量转发过去后面的 smartbook 服务上
#          - 端口是 81
          - backend:
              service:
                name: smartbook
                port:
                  number: 81
            pathType: Prefix
            path: /
